--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "weather-analytics-dashboard",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +16,14 @@
     "typescript": "^5.5.0",
     "vite": "^5.1.0",
     "@vitejs/plugin-react": "^5.1.0",
+    "vitest": "^1.3.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.6"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
   }
 }
