feat(auth): add Google OAuth with Firebase, login/logout flow, and protected routes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
-# Copy this file to .env and add your OpenWeatherMap API key
-VITE_OPENWEATHERMAP_API_KEY=83b34d461f2a4ed490151413250411
+# Copy this file to .env and add your API keys
+
+# OpenWeatherMap API key
+# Get one at: https://openweathermap.org/api
+VITE_OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
+
+# Firebase configuration (for Google Authentication)
+# Create a Firebase project at: https://console.firebase.google.com
+# Enable Google sign-in in Authentication > Sign-in method
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
