--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react-redux": "^8.1.1",
     "axios": "^1.5.0",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "firebase": "^10.7.0"
   },
   "devDependencies": {
     "typescript": "^5.5.0",
